[package]
name = "bladerf_adsb"
version = "0.1.0"
edition = "2021"
authors = ["Udi Shamir udishamir@gmail.com"]
license = "MIT"
repository = "https://github.com/udishamir/bladerf_adsb"
description = "Lightweight ADS-B (Mode S) parser for BladeRF SDR devices."

[[bench]]
#name = "my_benchmark"
name = "divan"
harness = false

[dependencies]
adsb_deku = "0.7.1"
bladerf = "0.1.2"
bladerf-sys = "0.1.2"
bytemuck = "1.22.0"
criterion = "0.5.1"
deku = "0.16"
divan = "0.1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
